--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "@types/escape-html": "^1.0.1",
     "@types/file-saver": "^2.0.3",
     "@types/flux": "^3.1.9",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/modernizr": "^3.5.3",
@@ -163,6 +164,7 @@
     "babel-jest": "^26.6.3",
     "blob-polyfill": "^6.0.20211015",
     "chokidar": "^3.5.1",
+    "cypress": "^9.5.4",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "eslint": "8.9.0",
@@ -172,6 +174,7 @@
     "eslint-plugin-matrix-org": "^0.4.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "fs-extra": "^10.0.1",
     "glob": "^7.1.6",
     "jest": "^27.4.0",
     "jest-canvas-mock": "^2.3.0",
