--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ package-lock.json
 
 .vscode
 .vscode/
+
+/cypress/videos
+/cypress/downloads
+/cypress/screenshots
+# These could have files in them but don't currently
+# Cypress will still auto-create them though...
+/cypress/fixtures
+/cypress/support
