Download artifact to a directory

--- a/.github/workflows/layered-build.yaml
+++ b/.github/workflows/layered-build.yaml
@@ -29,9 +29,10 @@ jobs:
               uses: actions/download-artifact@v3
               with:
                   name: previewbuild
+                  path: webapp
             - name: wheres the artifact
               run: ls -lR
             - name: Run Cypress tests
               uses: cypress-io/github-action@v2
               with:
-                start: npx serve -p 8080 matrix-react-sdk/webapp
+                start: npx serve -p 8080 webapp
