--- a/.github/workflows/layered-build.yaml
+++ b/.github/workflows/layered-build.yaml
@@ -33,6 +33,8 @@ jobs:
             - name: Run Cypress tests
               uses: cypress-io/github-action@v2
               with:
+                # The built in Electron runner seems to grind to a halt trying
+                # to run the tests, so use chrome.
                 browser: chrome
                 start: npx serve -p 8080 webapp
             - name: Upload Artifact
