Add the option to really allow open registration
and remove debug logging / comment fixes

--- a/cypress/plugins/synapsedocker/templates/COPYME/homeserver.yaml
+++ b/cypress/plugins/synapsedocker/templates/COPYME/homeserver.yaml
@@ -44,6 +44,7 @@ rc_login:
 media_store_path: "/data/media_store"
 uploads_path: "/data/uploads"
 enable_registration: true
+enable_registration_without_verification
 disable_msisdn_registration: false
 # These placeholders will be be replaced with values generated at start
 registration_shared_secret: "{{REGISTRATION_SECRET}}"
@@ -68,3 +69,4 @@ email:
 
 trusted_key_servers:
   - server_name: "matrix.org"
+suppress_key_server_warning: true
