--- a/cypress/plugins/synapsedocker/templates/consent/homeserver.yaml
+++ b/cypress/plugins/synapsedocker/templates/consent/homeserver.yaml
@@ -39,7 +39,7 @@ rc_login:
 media_store_path: "/data/media_store"
 uploads_path: "/data/uploads"
 enable_registration: true
-enable_registration_without_verification
+enable_registration_without_verification: true
 disable_msisdn_registration: false
 registration_shared_secret: "{{REGISTRATION_SECRET}}"
 report_stats: false
