Upload docker logs as artifacts
and temporarily remove contional to test

--- a/.github/workflows/layered-build.yaml
+++ b/.github/workflows/layered-build.yaml
@@ -38,10 +38,11 @@ jobs:
                 browser: chrome
                 start: npx serve -p 8080 webapp
             - name: Upload Artifact
-              if: failure()
+              #if: failure()
               uses: actions/upload-artifact@v2
               with:
                   name: cypress-results
                   path: |
                       cypress/screenshots
                       cypress/videos
+                      cypress/dockerlogs
