--- a/.github/workflows/layered-build.yaml
+++ b/.github/workflows/layered-build.yaml
@@ -38,7 +38,7 @@ jobs:
                 browser: chrome
                 start: npx serve -p 8080 webapp
             - name: Upload Artifact
-              #if: failure()
+              if: failure()
               uses: actions/upload-artifact@v2
               with:
                   name: cypress-results
