--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "lint:types": "tsc --noEmit --jsx react",
     "lint:style": "stylelint \"res/css/**/*.scss\"",
     "test": "jest",
+    "test:cypress": "cypress run",
+    "test:cypress:open": "cypress open",
     "test:e2e": "./test/end-to-end-tests/run.sh --app-url http://localhost:8080",
     "coverage": "yarn test --coverage"
   },
