--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "start:all": "echo THIS IS FOR LEGACY PURPOSES ONLY. && yarn start:build",
     "start:build": "babel src -w -s -d lib --verbose --extensions \".ts,.js\"",
     "lint": "yarn lint:types && yarn lint:js && yarn lint:style",
-    "lint:js": "eslint --max-warnings 0 src test",
-    "lint:js-fix": "eslint --fix src test",
+    "lint:js": "eslint --max-warnings 0 src test cypress",
+    "lint:js-fix": "eslint --fix src test cypress",
     "lint:types": "tsc --noEmit --jsx react",
     "lint:style": "stylelint \"res/css/**/*.scss\"",
     "test": "jest",
