Type check cypress files
and make it pass the type checks, specifically:
 * Upgrade sinon fake timers to a version that has the right types
 * Set module resolution
 * Type check cypress files separately

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "lint": "yarn lint:types && yarn lint:js && yarn lint:style",
     "lint:js": "eslint --max-warnings 0 src test cypress",
     "lint:js-fix": "eslint --fix src test cypress",
-    "lint:types": "tsc --noEmit --jsx react",
+    "lint:types": "tsc --noEmit --jsx react && tsc --noEmit -p cypress",
     "lint:style": "stylelint \"res/css/**/*.scss\"",
     "test": "jest",
     "test:cypress": "cypress run",
@@ -134,7 +134,7 @@
     "@matrix-org/olm": "https://gitlab.matrix.org/api/v4/projects/27/packages/npm/@matrix-org/olm/-/@matrix-org/olm-3.2.8.tgz",
     "@peculiar/webcrypto": "^1.1.4",
     "@sentry/types": "^6.10.0",
-    "@sinonjs/fake-timers": "^7.0.2",
+    "@sinonjs/fake-timers": "^9.1.2",
     "@types/classnames": "^2.2.11",
     "@types/commonmark": "^0.27.4",
     "@types/counterpart": "^0.18.1",
