--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "target": "es2016",
         "lib": ["es2020", "dom"],
-        "types": ["cypress"]
+        "types": ["cypress"],
+        "moduleResolution": "node"
     },
     "include": ["**/*.ts"]
 }
