--- a/.github/workflows/element-build-and-test.yaml
+++ b/.github/workflows/element-build-and-test.yaml
@@ -1,6 +1,7 @@
-# Produce a 'layered build' (a build of element-web with this version of
-# react-sdk) and output it as an artifact
-name: Layered Preview Build
+# Produce a build of element-web with this version of react-sdk
+# and any matching branches of element-web and js-sdk, output it
+# as an artifact and run integration tests.
+name: Element Web: Build and Test
 on:
     pull_request:
 jobs:
