--- a/.github/workflows/end-to-end-tests.yaml
+++ b/.github/workflows/end-to-end-tests.yaml
@@ -18,6 +18,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'yarn'
+
       - name: Prepare End-to-End tests
         run: ./scripts/ci/prepare-end-to-end-tests.sh
 
