--- a/.github/workflows/typecheck.yaml
+++ b/.github/workflows/typecheck.yaml
@@ -10,7 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: c-hive/gha-yarn-cache@v2
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'yarn'
 
       - name: Install Deps
         run: "./scripts/ci/install-deps.sh --ignore-scripts"
