--- a/.github/workflows/test_coverage.yml
+++ b/.github/workflows/test_coverage.yml
@@ -27,7 +27,7 @@ jobs:
         run: "./scripts/ci/install-deps.sh --ignore-scripts"
 
       - name: Run tests with coverage
-        run: "yarn install && yarn coverage"
+        run: "yarn coverage"
 
       - name: Upload coverage
         uses: codecov/codecov-action@v2
