Run develop CI when js-sdk notifies us

--- a/.github/workflows/element-build-and-test.yaml
+++ b/.github/workflows/element-build-and-test.yaml
@@ -4,6 +4,8 @@
 name: Element Web - Build and Test
 on:
   pull_request: { }
+  repository_dispatch:
+    types: [ upstream-sdk-notify ]
 jobs:
   build:
     runs-on: ubuntu-latest
