--- a/.github/workflows/static_analysis.yaml
+++ b/.github/workflows/static_analysis.yaml
@@ -1,6 +1,8 @@
 name: Static Analysis
 on:
   pull_request: { }
+  push:
+    branches: [ develop, master ]
   repository_dispatch:
     types: [ upstream-sdk-notify ]
 jobs:
