--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,13 @@
-name: Test coverage
+name: Tests
 on:
   pull_request: { }
   push:
-    branches: [ develop, main, master ]
+    branches: [ develop, master ]
+  repository_dispatch:
+    types: [ upstream-sdk-notify ]
 jobs:
-  test-coverage:
+  jest:
+    name: Jest with Codecov
     runs-on: ubuntu-latest
     env:
       # This must be set for fetchdep.sh to get the right branch
