--- a/.github/workflows/element-build-and-test.yaml
+++ b/.github/workflows/element-build-and-test.yaml
@@ -65,3 +65,25 @@ jobs:
             cypress/screenshots
             cypress/videos
             cypress/synapselogs
+
+  app-tests:
+    name: Element Web Integration Tests
+    runs-on: ubuntu-latest
+    env:
+      # This must be set for fetchdep.sh to get the right branch
+      PR_NUMBER: ${{github.event.number}}
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Download build
+        uses: actions/download-artifact@v3
+        with:
+          name: previewbuild
+          path: webapp
+
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'yarn'
+
+      - name: Run tests
+        run: "./scripts/ci/app-tests.sh"
