--- a/.github/workflows/element-build-and-test.yaml
+++ b/.github/workflows/element-build-and-test.yaml
@@ -27,7 +27,7 @@ jobs:
         run: |
           scripts/ci/layered.sh
           JSSDK_SHA=$(git -C matrix-js-sdk rev-parse --short=12 HEAD)
-          REACT_SHA=$(git -C matrix-react-sdk rev-parse --short=12 HEAD)
+          REACT_SHA=$(git rev-parse --short=12 HEAD)
           VECTOR_SHA=$(git -C element-web rev-parse --short=12 HEAD)
           echo "::set-output name=VERSION::$VECTOR_SHA-react-$REACT_SHA-js-$JSSDK_SHA"
 
