--- a/.github/workflows/element-build-and-test.yaml
+++ b/.github/workflows/element-build-and-test.yaml
@@ -63,13 +63,15 @@ jobs:
           name: previewbuild
           path: webapp
 
+      # Temporary workaround for test flakiness, wrap in wretry.action
       - name: Run Cypress tests
-        uses: cypress-io/github-action@v2
+        uses: Wandalen/wretry.action@v1
         with:
-          # The built in Electron runner seems to grind to a halt trying
-          # to run the tests, so use chrome.
-          browser: chrome
-          start: npx serve -p 8080 webapp
+          action: cypress-io/github-action@v2
+          with: |
+            # The built-in Electron runner seems to grind to a halt trying to run the tests, so use chrome.
+            browser: chrome
+            start: npx serve -p 8080 webapp
 
       - name: Upload Artifact
         if: failure()
