--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,7 @@ sonar.organization=matrix-org
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.sources=src,res
+sonar.tests=test,cypress
+sonar.exclusions=__mocks__,docs
