--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ env:
   PR_NUMBER: ${{ github.event.pull_request.number }}
 jobs:
   jest:
-    name: Jest with Codecov
+    name: Jest
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -31,11 +31,12 @@ jobs:
         run: "./scripts/ci/install-deps.sh --ignore-scripts"
 
       - name: Run tests with coverage
-        run: "yarn coverage"
+        run: "yarn coverage --ci"
 
-      - name: Upload coverage
-        uses: codecov/codecov-action@v2
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
         with:
-          fail_ci_if_error: false
-          verbose: true
-          override_commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || '' }}
+          name: coverage
+          path: |
+            coverage
+            !coverage/lcov-report
