--- a/.github/workflows/upgrade_dependencies.yml
+++ b/.github/workflows/upgrade_dependencies.yml
@@ -3,4 +3,4 @@ on:
   workflow_dispatch: { }
 jobs:
   upgrade:
-    uses: t3chguy/matrix-js-sdk/.github/workflows/upgrade_dependencies.yml@develop
+    uses: matrix-org/matrix-js-sdk/.github/workflows/upgrade_dependencies.yml@develop
