--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,5 +17,5 @@ sonar.exclusions=__mocks__,docs
 
 sonar.typescript.tsconfigPath=./tsconfig.json
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=spec/*.ts
+sonar.coverage.exclusions=test/**/*,cypress/**/*
 sonar.testExecutionReportPaths=coverage/test-report.xml
