--- a/package.json
+++ b/package.json
@@ -102,10 +102,10 @@
     "prop-types": "^15.7.2",
     "qrcode": "1.4.4",
     "re-resizable": "^6.9.0",
-    "react": "17.0.2",
+    "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-blurhash": "^0.1.3",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.0.0",
     "react-focus-lock": "^2.5.1",
     "react-transition-group": "^4.4.1",
     "rfc4648": "^1.4.0",
