--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "blob-polyfill": "^6.0.20211015",
     "chokidar": "^3.5.1",
     "cypress": "^9.5.4",
+    "cypress-localstorage-commands": "^1.7.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "eslint": "8.9.0",
