--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
     "@types/react": "^18.0.0",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/react-transition-group": "^4.4.0",
     "@types/sanitize-html": "^2.3.1",
     "@types/zxcvbn": "^4.4.0",
@@ -199,7 +199,7 @@
     "walk": "^2.3.14"
   },
   "resolutions": {
-    "@types/react": "17.0.14"
+    "@types/react": "^18.0.0"
   },
   "jest": {
     "snapshotSerializers": [
