Only run benchmarking on develop

--- a/.github/workflows/end-to-end-tests.yaml
+++ b/.github/workflows/end-to-end-tests.yaml
@@ -41,6 +41,7 @@ jobs:
             retention-days: 14
 
       - name: Store benchmark result
+        if: github.ref == 'refs/heads/develop'
         uses: matrix-org/github-action-benchmark@jsperfentry-1
         with:
           tool: 'jsperformanceentry'
