--- a/.github/workflows/element-build-and-test.yaml
+++ b/.github/workflows/element-build-and-test.yaml
@@ -89,6 +89,7 @@ jobs:
             cypress/synapselogs
 
       - name: Store benchmark result
+        if: github.ref == 'refs/heads/develop'
         uses: matrix-org/github-action-benchmark@jsperfentry-1
         with:
           name: Cypress measurements
