--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "blob-polyfill": "^6.0.20211015",
     "chokidar": "^3.5.1",
     "cypress": "^9.6.1",
+    "cypress-browser-permissions": "^1.1.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-real-events": "^1.7.0",
     "enzyme": "^3.11.0",
